--- a/deployment/kustomize/base/kustomization.yaml
+++ b/deployment/kustomize/base/kustomization.yaml
@@ -1,17 +1,11 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-images:
-  - name: webimage
-    newName: Minerva45/sampleapp
-    newTag: v1.0.3
+commonLabels:
+  app: zah-final-task
 
 resources:
-  - "deployment-db.yaml"
-  - "deployment-server.yaml"
-  - "namespace.yaml"
-  - "service.yaml"
-  - "configmap.yaml"
-  - "secret.yaml"
-
-namespace: zah
+- service.yaml
+- deployment.app.yaml
+- secret.yaml
+- ./postgres
