--- a/deployment/kustomize/base/secret.yaml
+++ b/deployment/kustomize/base/secret.yaml
@@ -1,11 +1,9 @@
 apiVersion: v1
 data:
-  PORT: NDAwMA==
-  POSTGRES_DB: cG9zdGdyZXM=
-  POSTGRES_HOST: YWJla3JlbmV2LWRldm9wcy1maW5hbC10YXNrLXNlcnZpY2UtcG9zdGdyZXMuYWJla3JlbmV2LWRldm9wcy1maW5hbC10YXNrLnN2Yy5jbHVzdGVyLmxvY2Fs
-  POSTGRES_PASSWORD: cG9zdGdyZXM=
-  POSTGRES_PORT: NTQzMg==
+  DATABASE_URL: cG9zdGdyZXM6Ly9wb3N0Z3JlczpzYW1wbGVwYXNzd29yZEBwb3N0Z3Jlcy1zZXJ2aWNlL3Bvc3RncmVzCg==
   POSTGRES_USER: cG9zdGdyZXM=
+  POSTGRES_PASSWORD: c2FtcGxlcGFzc3dvcmQ=
+  POSTGRES_DB: c2FtcGxlZGI=
 kind: Secret
 metadata:
-  name: zah-final-task-postgres-secret
+  name: sampleapp-secret
