--- a/deployment/kustomize/base/ingress.yaml
+++ b/deployment/kustomize/base/ingress.yaml
@@ -1,11 +1,13 @@
 apiVersion: networking.k8s.io/v1
+   
 kind: Ingress
+   
 metadata:
-  name: zah-final-task-ingress
+  name: sampleapp-ingress
   annotations:
     kubernetes.io/ingress.class: "nginx"
-spec:
-  rules:
+spec:   
+  rules:   
     - host: zah.dacdevops.ru
       http:
         paths:
@@ -13,10 +15,11 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: zah-final-task-service
+                name: sampleapp-service
                 port:
                   name: http
+
   tls:
     - hosts:
       - zah.dacdevops.ru
-      secretName: zah-final-task-cert
+      secretName: zah-cert
