--- a/deployment/kustomize/base/kustomization.yaml
+++ b/deployment/kustomize/base/kustomization.yaml
@@ -1,11 +1,13 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-commonLabels:
-  app: zah-final-task
-
 resources:
-- service.yaml
-- deployment.app.yaml
-- secret.yaml
-- ./postgres
+  - deployment.yaml
+  - service.yaml
+  - postgres-deployment.yaml
+  - postgres-service.yaml
+  - secret.yaml
+  - ingress.yaml
+
+images:
+  - name: zah/sampleapp
