--- a/deployment/kustomize/base/service.yaml
+++ b/deployment/kustomize/base/service.yaml
@@ -1,13 +1,17 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: zah-final-task-service
+  name: sampleapp-service
 spec:
+  selector:
+    app: sampleapp
   ports:
     - name: http
-      port: 8000
       protocol: TCP
+      port: 80
       targetPort: 8000
-  selector:
-    app: zah-devops-final-task
+    - name: https
+      protocol: TCP
+      port: 443
+      targetPort: 8000
   type: NodePort
