--- a/deployment/kustomize/overlays/certificate.yaml
+++ b/deployment/kustomize/overlays/certificate.yaml
@@ -1,12 +1,11 @@
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: zah-final-task-certificate
-  namespace: zah-final-task
+  name: zah-certificate
 spec:
   dnsNames:
   - 'zah.dacdevops.ru'
   issuerRef:
     kind: ClusterIssuer
     name: yc-clusterissuer
-  secretName: zah-final-task-cert
+  secretName: zah-cert
