--- a/deployment/kustomize/base/secret.yaml
+++ b/deployment/kustomize/base/secret.yaml
@@ -1,9 +1,11 @@
 apiVersion: v1
 data:
-  DATABASE_URL: cG9zdGdyZXM6Ly9wb3N0Z3JlczpzYW1wbGVwYXNzd29yZEBwb3N0Z3Jlcy1zZXJ2aWNlL3Bvc3RncmVzCg==
-  POSTGRES_USER: cG9zdGdyZXM=
-  POSTGRES_PASSWORD: c2FtcGxlcGFzc3dvcmQ=
-  POSTGRES_DB: c2FtcGxlZGI=
+  PORT: NTAwMA==
+  POSTGRES_DB: aGVsbG9fZmxhc2tfcHJvZA==
+  POSTGRES_HOST: c2hwYWdpbi1kZXZvcHMtZmluYWwtdGFzay1zZXJ2aWNlLXBvc3RncmVzLnNocGFnaW4tZGV2b3BzLWZpbmFsLXRhc2suc3ZjLmNsdXN0ZXIubG9jYWw=
+  POSTGRES_PASSWORD: aGVsbG9fZmxhc2s=
+  POSTGRES_PORT: NTQzMg==
+  POSTGRES_USER: aGVsbG9fZmxhc2s=
 kind: Secret
 metadata:
-  name: sampleapp-secret
+  name: zah-devops-final-task-postgres-secret
