--- a/deployment/kustomize/overlays/common/ingress.yaml
+++ b/deployment/kustomize/overlays/common/ingress.yaml
@@ -1,13 +1,11 @@
 apiVersion: networking.k8s.io/v1
-   
 kind: Ingress
-   
 metadata:
-  name: sampleapp-ingress
+  name: zah-devops-final-task-ingress
   annotations:
     kubernetes.io/ingress.class: "nginx"
-spec:   
-  rules:   
+spec:
+  rules:
     - host: zah.dacdevops.ru
       http:
         paths:
@@ -15,11 +13,10 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: sampleapp-service
+                name: zah-devops-final-task-service
                 port:
                   name: http
-
   tls:
     - hosts:
       - zah.dacdevops.ru
-      secretName: zah-cert
+      secretName: zah-devops-final-task-cert
