--- a/deployment/kustomize/base/service.yaml
+++ b/deployment/kustomize/base/service.yaml
@@ -1,17 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: sampleapp-service
+  name: zah-devops-final-task-service
 spec:
-  selector:
-    app: sampleapp
   ports:
     - name: http
+      port: 5000
       protocol: TCP
-      port: 80
-      targetPort: 8000
-    - name: https
-      protocol: TCP
-      port: 443
-      targetPort: 8000
-  type: NodePort
+      targetPort: 5000
+  selector:
+    app: zah-devops-final-task
+  type: ClusterIP
