--- a/deployment/kustomize/base/service.yaml
+++ b/deployment/kustomize/base/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: zah-devops-final-task-service
+  name: zah-sampleapp-service
 spec:
   ports:
     - name: http
@@ -9,5 +9,5 @@ spec:
       protocol: TCP
       targetPort: 5000
   selector:
-    app: zah-devops-final-task
+    app: zah-sampleapp
   type: ClusterIP
