--- a/deployment/kustomize/base/kustomization.yaml
+++ b/deployment/kustomize/base/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 commonLabels:
-  app: zah-devops-final-task
+  app: zah-sampleapp
 
 resources:
 - service.yaml
