--- a/deployment/kustomize/base/postgres/deployment.postgres.yaml
+++ b/deployment/kustomize/base/postgres/deployment.postgres.yaml
@@ -1,18 +1,18 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: zah-devops-final-task-deployment-postgres
+  name: zah-sampleapp-deployment-postgres
   labels:
-    app: zah-devops-final-task
+    app: zah-sampleapp
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: zah-devops-final-task-postgres
+      app: zah-sampleapp-postgres
   template:
     metadata:
       labels:
-        app: zah-devops-final-task-postgres
+        app: zzah-sampleapp-postgres
     spec:
       containers:
         - name: postgres
@@ -21,7 +21,7 @@ spec:
             - containerPort: 5432
           envFrom:
             - secretRef:
-                name: zah-devops-final-task-postgres-secret
+                name: zah-sampleapp-postgres-secret
           env:
             - name: POSTGRES_HOST_AUTH_METHOD
               value: trust
