--- a/deployment/kustomize/base/postgres/kustomization.yaml
+++ b/deployment/kustomize/base/postgres/kustomization.yaml
@@ -2,11 +2,11 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 commonLabels:
-  app: zah-devops-final-task
+  app: zah-sampleapp
 
 images:
   - name: final-task
-    newName: zah/final_task_app:main
+    newName: zah-sampleapp/zah-sampleapp_app:main
     newTag: v1.1.0
 
 resources:
