--- a/deployment/kustomize/base/postgres/service.postgres.yaml
+++ b/deployment/kustomize/base/postgres/service.postgres.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: zah-devops-final-task-service-postgres
+  name: zah-sampleapp-service-postgres
 spec:
   ports:
     - protocol: TCP
       port: 5432
       targetPort: 5432
   selector:
-    app: zah-devops-final-task
+    app: zah-sampleapp
   type: ClusterIP
