--- a/deployment/kustomize/overlays/common/ingress.yaml
+++ b/deployment/kustomize/overlays/common/ingress.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: zah-devops-final-task-ingress
+  name: zah-sampleapp-ingress
   annotations:
     kubernetes.io/ingress.class: "nginx"
 spec:
@@ -13,10 +13,10 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: zah-devops-final-task-service
+                name: zah-sampleapp-service
                 port:
                   name: http
   tls:
     - hosts:
       - zah.dacdevops.ru
-      secretName: zah-devops-final-task-cert
+      secretName: zah-sampleapp-cert
