--- a/deployment/kustomize/overlays/common/certificate.yaml
+++ b/deployment/kustomize/overlays/common/certificate.yaml
@@ -2,7 +2,7 @@ apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: zah-sampleapp-certificate
-  namespace: zah-sampleapp-task
+  namespace: zah-sampleapp
 spec:
   dnsNames:
   - 'zah.dacdevops.ru'
