--- a/deployment/kustomize/overlays/common/kustomization.yaml
+++ b/deployment/kustomize/overlays/common/kustomization.yaml
@@ -2,8 +2,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 images:
-  - name: final-task-image
-    newName: zah/final_task_app:main
+  - name: sampleapp:main
+    newName: minerva45/sampleapp:main
     newTag: v1.1.1
 
 resources:
