--- a/deployment/kustomize/base/service.yaml
+++ b/deployment/kustomize/base/service.yaml
@@ -3,11 +3,15 @@ kind: Service
 metadata:
   name: zah-sampleapp-service
 spec:
-  ports:
-    - name: http
-      port: 5000
-      protocol: TCP
-      targetPort: 5000
   selector:
     app: zah-sampleapp
-  type: ClusterIP
+  ports:
+    - name: http
+      protocol: TCP
+      port: 80
+      targetPort: 8000
+    - name: https
+      protocol: TCP
+      port: 443
+      targetPort: 8000
+  type: NodePort
