--- a/deployment/kustomize/overlays/common/kustomization.yaml
+++ b/deployment/kustomize/overlays/common/kustomization.yaml
@@ -1,13 +1,15 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-images:
-  - name: sampleapp:main
-    newName: minerva45/sampleapp:main
-    newTag: v1.1.1
+namespace: zah-sampleapp
 
 resources:
-- ../../base
-- ingress.yaml
-- namespace.yaml
-- certificate.yaml
+  - ../base
+  - certificate.yaml
+  - namespace.yaml
+
+images:
+  - name:  minerva45/sampleapp
+  - name: nginx
+    newName: nginx
+    newTag: 1.23.2-alpine
