--- a/.github/actions/workflows/ci.yaml
+++ b/.github/actions/workflows/ci.yaml
@@ -1,39 +1,35 @@
-name: CI
-on: 
-  push:
-  release:
-    types:
-      - published
+name: CI workflow
+on:
+  push: {}
   workflow_dispatch:
     inputs:
       tag:
         default: latest
         description: image tag
+        
 
 jobs:
- build:
+  build:
     runs-on: ubuntu-latest
     env:
+      IMAGE: ${{ secrets.DOCKERHUB_USERNAME }}/sampleapp
       TAG: "${{ inputs.tag != '' && inputs.tag || github.ref_name }}"
-      PUSH: "${{ (github.ref_name == 'main') && 'true' ||
-        startsWith(github.ref, 'refs/tags/v') && 'true' || 'false'}}"
     steps:
       - name: Check out Project
         uses: actions/checkout@v3
-
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Build docker image
+      # Docs: https://github.com/docker/build-push-action
+      - name: Build  image
         uses: docker/build-push-action@v3
         with:
           context: .
           file: ./Dockerfile
-          push: ${{ env.PUSH }}
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/sampleapp:${{ env.TAG }}
-      
-      - name: Test
-        run: docker run --rm ${{ secrets.DOCKERHUB_USERNAME }}/sampleapp:${{ env.TAG }} python manage.py test
+          push: ${{ (github.ref_name =='main') && 'true' || 'false'  }}
+          tags: ${{ env.IMAGE }}:${{ env.TAG }}
+      - name: Tests
+        run: |
+          docker run --rm ${{ env.IMAGE }}:${{ env.TAG }} test
