--- a/deployment/kustomize/base/deployment.yaml
+++ b/deployment/kustomize/base/deployment.yaml
@@ -14,9 +14,9 @@ spec:
     spec:
       initContainers:
         - name: zah-sampleapp-migrate
-          image: minerva45/sampleapp:latest
+          image: minerva45/sampleapp:main
           ports:
-            - containerPort: 8001
+            - containerPort: 8000
           envFrom:
             - secretRef:
                 name: zah-sampleapp-postgres-secret
@@ -26,14 +26,14 @@ spec:
             - migrate
       containers:
         - name: zah-sampleapp
-          image: minerva45/sampleapp:latest
+          image: minerva45/sampleapp:main
           ports:
-            - containerPort: 8001
+            - containerPort: 8000
           command: 
             - python
             - manage.py
             - runserver
-            - 0.0.0.0:8001
+            - 0.0.0.0:8000
           envFrom:
             - secretRef:
                 name: zah-sampleapp-postgres-secret
